@@ -1,17 +1,1 @@
 local addonName, addon = ...
-
-addon.AdventureMaps = {
-    -- Dragon Isles
-    [2057] = {
-        72266, -- The Waking Shores
-        72267, -- Ohn'ahran Plains
-        72268, -- The Azure Span
-        72269, -- Thaldraszus
-    },
-}
-
-addon.Emotes = {
-    [153580] = "wave", -- Gor'groth (Exile's Reach)
-}
-
-addon.IgnoredQuestGivers = {}
